# ai-grind

./: .mcp.json  README.md  pyproject.toml
src/devtools_mcp/: __init__.py  filters.py  index.py  models.py  registry.py  server.py  workspace.py
src/devtools_mcp/dtrace/: __init__.py  analysis.py  backend.py  formatters.py  models.py  parsers.py  runner.py
src/devtools_mcp/formatters/: __init__.py  tables.py  utils.py
src/devtools_mcp/lldb/: __init__.py  analysis.py  backend.py  formatters.py  models.py  parsers.py  session.py
src/devtools_mcp/perf/: __init__.py  analysis.py  backend.py  formatters.py  models.py  parsers.py  runner.py
src/devtools_mcp/tools/: __init__.py  analysis_tools.py  batch_tools.py  debug_tools.py  search_tools.py
src/devtools_mcp/valgrind/: __init__.py  backend.py  details.py  formatters.py  models.py  runner.py
src/devtools_mcp/valgrind/analysis/: __init__.py  cachegrind.py  callgrind.py  comparison.py  massif.py  memcheck.py  threadcheck.py
src/devtools_mcp/valgrind/parsers/: __init__.py  cachegrind.py  callgrind.py  massif.py  xml_parser.py
src/valgrind_mcp/: __init__.py  analysis.py  cli.py  filters.py  formatters.py  models.py  runner.py  server.py  workspace.py
src/valgrind_mcp/analysis/: __init__.py  cachegrind.py  callgrind.py  comparison.py  massif.py  memcheck.py  threadcheck.py
src/valgrind_mcp/formatters/: __init__.py  details.py  summaries.py  tables.py  utils.py
src/valgrind_mcp/parsers/: __init__.py  cachegrind.py  callgrind.py  massif.py  xml_parser.py
src/valgrind_mcp/tools/: __init__.py  comparison_tools.py  error_tools.py  memory_tools.py  profile_tools.py  query_tools.py  run_tools.py  workspace_tools.py
tests/: conftest.py  test_analysis.py  test_dtrace_parsers.py  test_filters.py  test_lldb_parsers.py  test_parsers.py  test_perf_parsers.py  test_server.py
tests/fixtures/: target.c
